# sales-data-tool

./: .gitignore  README.md  finance-data.spec  pyproject.toml  requirements.txt  使用说明.txt  运行.bat  运行.command
.github/workflows/: build-windows-exe.yml
configs/: example.yml  template-example.yml
docs/: design.md  finance-report.md
scripts/: build_finance_report_docx.py  build_windows.bat  run.py
src/finance_excel_flow/: __init__.py  cli.py  config.py  console.py  engine.py  paths.py
templates/: ka_promo_and_expense_template.xlsx  ~$ka_promo_and_expense_template.xlsx
tests/: test_config.py
